2008-05-09  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.ThickClient/Banshee.Sources.Gui/SourceComboBox.cs:
	Moved from MiniMode; use the new SourceModel and use the SourceRowRenderer

	* src/Core/Banshee.ThickClient/Banshee.Sources.Gui/SourceModel.cs: Pulled
	out model specific code from SourceView into a new TreeModel subclass
	that SourceView and SourceComboBox can use

	* src/Core/Banshee.ThickClient/Banshee.Sources.Gui/SourceRowRenderer.cs:
	Implemented proper CellRendererState -> StateType mapping so the renderer
	works properly inside other widgets (i.e. GtkComboBox); add some default
	sizing for non TreeView widgets

	* src/Core/Banshee.ThickClient/Banshee.Sources.Gui/SourceView.cs:
	* src/Core/Banshee.ThickClient/Banshee.Sources.Gui/SourceView_DragAndDrop.cs:
	Fixed up to use the new SourceModel

	* src/Extensions/Banshee.MiniMode/Banshee.MiniMode/MiniModeWindow.cs:
	Fixed up to use the new SourceComboBox

2008-05-09  Gabriel Burt  <gabriel.burt@gmail.com>

	This commit greatly improves performance when editing/saving track
	information and on each track transition by avoiding many unnecessary
	source reloads.

	* src/Extensions/Banshee.AudioCd/Banshee.AudioCd/AudioCdSource.cs: Improve
	auto-rip label.

	* src/Core/Banshee.ThickClient/Banshee.Gui.Widgets/ConnectedSeekSlider.cs:
	Avoid changing to 'Idle' when transitioning between songs, and avoid
	jumpiness by not setting the duration until the first Iteration event.
	Makes things much smoother.

	* src/Core/Banshee.ThickClient/Banshee.Gui.Dialogs/TrackEditor.cs: Fix the
	horrible save performance by avoiding reloading until after having saved
	all the tracks, instead of after each one.  Fix whitespace.

	* src/Core/Banshee.Services/Banshee.Sources/DatabaseSource.cs: Change
	OnTracksChanged to take an array of QueryFields that were modified.  Add
	protected InvalidateCaches method used to clear the managed cache for the
	track/artist/album model, but not reload it (eg the display data has